# slack-to-discord

./: .gitignore  Cargo.toml  README.md  config.json  schema.sql  test.py
migrations/: 20220924075716_init.sql  20220924123503_posts.sql  20220924140614_fix_posts.sql  20221003054314_not_null_pri_key.sql  20221009142933_file_with_mime.sql
src/: discord.rs  lib.rs  main.rs  slack.rs
