[package]
edition = "2021"
name = "slack-to-discord"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = {version = "3.2.21", features = ["derive"]}
encoding_rs = "0.8.31"
reqwest = {version = "0.11.11", default-features = false, features = ["rustls-tls-webpki-roots", "json"]}
serde = "1.0.144"
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = {version = "1.21.1", features = ["rt-multi-thread", "macros", "fs"]}
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
zip = "0.6.2"
