[package]
edition = "2021"
name = "slack-to-discord"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version="1.0.65", features=["backtrace"]}
chrono = "0.4.22"
clap = {version = "3.2.21", features = ["derive"]}
encoding_rs = "0.8.31"
futures = "0.3.24"
hex = "0.4.3"
itertools = "0.10.4"
magic = "0.13.0"
maplit = "1.0.2"
multimap = "0.8.3"
once_cell = "1.14.0"
regex = "1.6.0"
reqwest = {version = "0.11.11", default-features = false, features = ["rustls-tls-webpki-roots", "json", "multipart"]}
rmp-serde = "1.1.0"
serde = {version="1.0.144", features=["derive"]}
serde_json = "1.0.85"
serde_repr = "0.1.9"
sha2 = "0.10.5"
sqlx = {version="0.6.2", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"]}
thiserror = "1.0.35"
tokio = {version = "1.21.1", features = ["rt-multi-thread", "macros", "fs"]}
tokio-serde = {version="0.8.0", features=["serde_json"]}
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
url = "2.3.1"
zip = "0.6.2"
